# le-ptit-terminal

./: .gitignore  Cargo.toml  run-script.ps1
.github/workflows/: build.yml  release.yml
scripts/: get-contacts-from-helloasso.py  get-emails.py
src/: app.rs  eventbrite_attendees.rs  eventbrite_auth.rs  main.rs  ui.rs
